# ecosystem-template

template/: Cargo.toml
template/src/: lib.rs
